{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 22,
  "lineage": "18d4d4b4-507f-f166-d4b1-9443a7087779",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:131377894429:loadbalancer/NPA21-development-nginx-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "NPA21-development-nginx-elb-998743338.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "NPA21-development-nginx-elb",
            "idle_timeout": 60,
            "instances": [
              "i-00065a67893578175",
              "i-0194f92f5e2ced083",
              "i-063c44ce264e29d39",
              "i-099905d29dfe69d03"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "NPA21-development-nginx-elb",
            "security_groups": [
              "sg-0cd5058376b8a75a4"
            ],
            "source_security_group": "131377894429/NPA21-development-nginx_elb_sg",
            "source_security_group_id": "sg-0cd5058376b8a75a4",
            "subnets": [
              "subnet-00fcd8cef3ab672c6",
              "subnet-088414701a0c31339",
              "subnet-0b2c7ba4bc25bc621"
            ],
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-elb"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_security_group.elb-sg",
            "aws_security_group.nginx-sg",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ee2037aae8e996c",
            "arn": "arn:aws:ec2:us-east-1:131377894429:instance/i-0522e6a39eb1c55af",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0522e6a39eb1c55af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0066e8841b4cf3ae2",
            "private_dns": "ip-10-1-0-212.ec2.internal",
            "private_ip": "10.1.0.212",
            "public_dns": "ec2-54-145-96-69.compute-1.amazonaws.com",
            "public_ip": "54.145.96.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00c066773901d0514",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2c7ba4bc25bc621",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-db1"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "development",
              "Name": "NPA21-development-db1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01d2d8e629a7db36c"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ee2037aae8e996c",
            "arn": "arn:aws:ec2:us-east-1:131377894429:instance/i-0db3f9aef692fe144",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db3f9aef692fe144",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07938f782290fdb56",
            "private_dns": "ip-10-1-1-178.ec2.internal",
            "private_ip": "10.1.1.178",
            "public_dns": "ec2-3-210-199-223.compute-1.amazonaws.com",
            "public_ip": "3.210.199.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0156532d09009ffc0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fcd8cef3ab672c6",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-db2"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-db2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01d2d8e629a7db36c"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ee2037aae8e996c",
            "arn": "arn:aws:ec2:us-east-1:131377894429:instance/i-0ad0edf4f92813073",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad0edf4f92813073",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01b4dda60fe0206ee",
            "private_dns": "ip-10-1-2-26.ec2.internal",
            "private_ip": "10.1.2.26",
            "public_dns": "ec2-3-80-193-220.compute-1.amazonaws.com",
            "public_ip": "3.80.193.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-095ecce3d45e5ca9d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088414701a0c31339",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-db3"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-db3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01d2d8e629a7db36c"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ee2037aae8e996c",
            "arn": "arn:aws:ec2:us-east-1:131377894429:instance/i-0ac9d4934639ab02c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ac9d4934639ab02c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02fe2e4f48ef67868",
            "private_dns": "ip-10-1-0-240.ec2.internal",
            "private_ip": "10.1.0.240",
            "public_dns": "ec2-3-81-233-206.compute-1.amazonaws.com",
            "public_ip": "3.81.233.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d01db8b53b6688c4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2c7ba4bc25bc621",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-db4"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-db4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01d2d8e629a7db36c"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ee2037aae8e996c",
            "arn": "arn:aws:ec2:us-east-1:131377894429:instance/i-099905d29dfe69d03",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099905d29dfe69d03",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c30d42f24dd32060",
            "private_dns": "ip-10-1-0-27.ec2.internal",
            "private_ip": "10.1.0.27",
            "public_dns": "ec2-3-87-172-49.compute-1.amazonaws.com",
            "public_ip": "3.87.172.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b116d365e76763fe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2c7ba4bc25bc621",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-nginx1"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-nginx1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01d2d8e629a7db36c"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ee2037aae8e996c",
            "arn": "arn:aws:ec2:us-east-1:131377894429:instance/i-00065a67893578175",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00065a67893578175",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00b1c51608fd4529b",
            "private_dns": "ip-10-1-1-166.ec2.internal",
            "private_ip": "10.1.1.166",
            "public_dns": "ec2-18-204-243-91.compute-1.amazonaws.com",
            "public_ip": "18.204.243.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cdc43486bb071d33",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00fcd8cef3ab672c6",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-nginx2"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-nginx2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01d2d8e629a7db36c"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ee2037aae8e996c",
            "arn": "arn:aws:ec2:us-east-1:131377894429:instance/i-0194f92f5e2ced083",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0194f92f5e2ced083",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f7be97c2210e07e2",
            "private_dns": "ip-10-1-2-238.ec2.internal",
            "private_ip": "10.1.2.238",
            "public_dns": "ec2-52-71-18-125.compute-1.amazonaws.com",
            "public_ip": "52.71.18.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0efc0c32e0192fda6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-088414701a0c31339",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-nginx3"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-nginx3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01d2d8e629a7db36c"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ee2037aae8e996c",
            "arn": "arn:aws:ec2:us-east-1:131377894429:instance/i-063c44ce264e29d39",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063c44ce264e29d39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00e0bfab2d36c89f2",
            "private_dns": "ip-10-1-0-141.ec2.internal",
            "private_ip": "10.1.0.141",
            "public_dns": "ec2-3-81-208-86.compute-1.amazonaws.com",
            "public_ip": "3.81.208.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0542cc67a9132774e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2c7ba4bc25bc621",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-nginx4"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-nginx4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01d2d8e629a7db36c"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_ami.aws-linux-2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131377894429:internet-gateway/igw-00ac53c8f129b737e",
            "id": "igw-00ac53c8f129b737e",
            "owner_id": "131377894429",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-Igw"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-Igw"
            },
            "vpc_id": "vpc-03d06479ef006074a"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRoute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131377894429:route-table/rtb-0ee9e60965b8f7722",
            "id": "rtb-0ee9e60965b8f7722",
            "owner_id": "131377894429",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ac53c8f129b737e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-publicRoute"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-publicRoute"
            },
            "vpc_id": "vpc-03d06479ef006074a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Igw",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a862df31c3d8791e",
            "route_table_id": "rtb-0ee9e60965b8f7722",
            "subnet_id": "subnet-0b2c7ba4bc25bc621"
          },
          "dependencies": [
            "aws_internet_gateway.Igw",
            "aws_route_table.publicRoute",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd8eedb92302ec01",
            "route_table_id": "rtb-0ee9e60965b8f7722",
            "subnet_id": "subnet-00fcd8cef3ab672c6"
          },
          "dependencies": [
            "aws_internet_gateway.Igw",
            "aws_route_table.publicRoute",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bcf36764e72408f",
            "route_table_id": "rtb-0ee9e60965b8f7722",
            "subnet_id": "subnet-088414701a0c31339"
          },
          "dependencies": [
            "aws_internet_gateway.Igw",
            "aws_route_table.publicRoute",
            "aws_subnet.Public",
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131377894429:security-group/sg-0cd5058376b8a75a4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd5058376b8a75a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "NPA21-production-nginx_elb_sg",
            "name_prefix": "",
            "owner_id": "131377894429",
            "revoke_rules_on_delete": false,
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-elb-sg"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d06479ef006074a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131377894429:security-group/sg-01d2d8e629a7db36c",
            "description": "Allow ssh and web access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d2d8e629a7db36c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "NPA21-production-nginx_sg",
            "name_prefix": "",
            "owner_id": "131377894429",
            "revoke_rules_on_delete": false,
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-nginx-sg"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03d06479ef006074a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131377894429:subnet/subnet-0b2c7ba4bc25bc621",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0b2c7ba4bc25bc621",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131377894429",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-Public1"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-Public1"
            },
            "vpc_id": "vpc-03d06479ef006074a"
          },
          "dependencies": [
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131377894429:subnet/subnet-00fcd8cef3ab672c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-00fcd8cef3ab672c6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131377894429",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-Public2"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-Public2"
            },
            "vpc_id": "vpc-03d06479ef006074a"
          },
          "dependencies": [
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131377894429:subnet/subnet-088414701a0c31339",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-088414701a0c31339",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "131377894429",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-Public3"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-Public3"
            },
            "vpc_id": "vpc-03d06479ef006074a"
          },
          "dependencies": [
            "aws_vpc.VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:131377894429:vpc/vpc-03d06479ef006074a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0b22af0c960524f47",
            "default_route_table_id": "rtb-0df1f726e3c1e25c9",
            "default_security_group_id": "sg-04ef73e89bb5f8b05",
            "dhcp_options_id": "dopt-0006ababbf0bd34d6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03d06479ef006074a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0df1f726e3c1e25c9",
            "owner_id": "131377894429",
            "tags": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-vpc-Test-by-MIN"
            },
            "tags_all": {
              "BillingCode": "NPA21",
              "Environment": "production",
              "Name": "NPA21-production-vpc-Test-by-MIN"
            }
          }
        }
      ]
    }
  ]
}